Simulator: Bug Fixes and Improved Aesthetics of the page:  - Gap between the TabBar and LinkBar adjusted as in PSD.  - Link Bar Effects now apply on the entire 'Participate' block.  - Reduced height of the Link Bar.  - Color of TabBar was changed according to the PSD.  - The LinkBar hover transition effects are now smoother.

--- a/formatting.css
+++ b/formatting.css
@@ -73,21 +73,19 @@ a
 .navBarLinks
 {
 	background: #181818;
-	width: 842px;
+	width: 852px;
 	opacity: 0.55;
 	margin: auto;
 	font-size: 25px;
 	font-weight: bold;
 	color: #000000;
-	padding: 5px;
-	margin-bottom: -0.75px;
+	margin-bottom: 0px;
 }
 
 #navHome
 {
 	display: inline-block;
 	text-align: left;
-	text-indent: 2px;
 	width: 210px;
 	opacity: 1.0;
 	color: #000000;
@@ -97,6 +95,7 @@ a
 {
 	display: inline-block;
 	text-align: left;
+	text-indent: -6px;
 	width: 210px;
 	color: #000000;
 }
@@ -105,6 +104,7 @@ a
 {
 	display: inline-block;
 	text-align: left;
+	text-indent: -6px;
 	width: 210px;
 	color: #000000;
 }
@@ -113,7 +113,9 @@ a
 {
 	display: inline-block;
 	text-align: left;
+	text-indent: -6px;
 	color: #000000;
+	width: 204px;
 }
 
 .navTabBar
